--- a/angular/package.json
+++ b/angular/package.json
@@ -25,6 +25,7 @@
     "datatables.net-dt": "^2.2.2",
     "datatables.net-responsive-dt": "^3.0.4",
     "dayjs": "^1.11.13",
+    "firebase": "^12.6.0",
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
     "ng-circle-progress": "^1.7.1",
